# BlackSheep

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  apitest.py  asgi_middleware_example.py  azure-pipelines.yml  devrequirements.txt  docs.py  example.py  issue592.py  nginx-http2.conf  noext.sh  profiling.sh  punqexample.py  pyproject.toml  pytest.ini  requirements.pypy.txt  requirements.txt  router.py  securestr.py  setup.py  setup_test_server.sh  test_local.py  test_public.py
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-manylinux-wheels.sh  ci-cd.yml  main.yml  perf.yml  perfhistory.yml
blacksheep/: __init__.py  __init__.pyi  asgi.pyi  baseapp.pxd  baseapp.py  baseapp.pyi  baseapp.pyx  connection.pxd  connection.pyx  contents.pxd  contents.py  contents.pyi  contents.pyx  cookies.pxd  cookies.py  cookies.pyi  cookies.pyx  exceptions.pxd  exceptions.py  exceptions.pyi  exceptions.pyx  headers.pxd  headers.py  headers.pyi  headers.pyx  messages.pxd  messages.py  messages.pyi  messages.pyx  middlewares.py  multipart.py  normalization.py  options.pxd  options.pyx  ranges.py  scribe.pxd  scribe.py  scribe.pyi  scribe.pyx  url.pxd  (+3 more)
blacksheep/client/: __init__.py  connection.py  cookies.py  exceptions.py  logs.py  parser.py  pool.py  session.py
blacksheep/common/: __init__.py  asyncfs.py  types.py
blacksheep/common/asyncfs/: abc.py  core.py
blacksheep/common/files/: asyncfs.py  info.py  pathsutils.py
blacksheep/includes/: consts.html  consts.pxi
blacksheep/middlewares/: __init__.py  allowedhosts.py
blacksheep/plugins/: __init__.py  json.py
blacksheep/server/: __init__.py  annotations.py  application.py  asgi.py  authentication.py  authorization.py  bindings.py  compression.py  controllers.py  cors.py  csrf.py  dataprotection.py  di.py  diagnostics.py  env.py  errors.py  gzip.py  handlers.py  logs.py  middlewares.py  normalization.py  operations.py  options.py  pathsutils.py  process.py  redirects.py  resources.py  responses.py  routing.py  security.py  sse.py  templating.py  websocket.py
blacksheep/server/authentication/: __init__.py  apikey.py  basic.py  cookie.py  jwt.py  oidc.py
blacksheep/server/authorization/: __init__.py
blacksheep/server/bindings/: __init__.py  converters.py  dates.py
blacksheep/server/files/: __init__.py  dynamic.py  static.py
blacksheep/server/headers/: cache.py
blacksheep/server/openapi/: common.py  docstrings.py  exceptions.py  ui.py  v3.py
blacksheep/server/otel/: __init__.py  otlp.py
blacksheep/server/remotes/: forwarding.py  hosts.py  scheme.py
blacksheep/server/rendering/: abc.py  jinja2.py  models.py
blacksheep/server/res/: __init__.py  error.html  fileslist.html  openapi-ui.html  redoc-ui.html  scalar-ui.html  swagger-ui.html
blacksheep/server/security/: __init__.py  hsts.py
blacksheep/services/: __init__.py
blacksheep/sessions/: __init__.py  abc.py  cookies.py  crypto.py  json.py  logs.py  memory.py
blacksheep/settings/: __init__.py  di.py  encodings.py  html.py  json.py
blacksheep/testing/: __init__.py  client.py  helpers.py  messages.py  simulator.py  websocket.py
blacksheep/utils/: __init__.py  aio.py  imports.py  meta.py  reloader.py  time.py
examples/: example_a2wsgi.py
itests/: README.md  __init__.py  app.py  app_1.py  app_2.py  app_3.py  app_4.py  app_orjson.py  app_three.py  app_two.py  client_fixtures.py  conftest.py  flask_app.py  issue606.py  logs.py  lorem.py  requirements.txt  server_fixtures.py  test_auth_oidc.py  test_client.py  test_server.py  test_utils_aio.py  utils.py
itests/static/: README.md  example.html
neoteroi/: __init__.pyx
neoteroi/web/: __init__.py  baseapp.pyi  baseapp.pyx  contents.pxd  contents.pyx  cookies.pyx  messages.pyi  messages.pyx  middlewares.py  multipart.py  scribe.pyi  url.pxd
neoteroi/web/client/: connection.py  cookies.py  exceptions.py  pool.py  session.py
neoteroi/web/common/files/: asyncfs.py  info.py  (+1 more)
neoteroi/web/includes/: consts.pxi
neoteroi/web/server/: application.py  asgi.py  bindings.py  controllers.py  cors.py  csrf.py  dataprotection.py  di.py  env.py  errors.py  normalization.py  responses.py  routing.py  websocket.py
neoteroi/web/sessions/: __init__.py
neoteroi/web/settings/: __init__.py  di.py  html.py
neoteroi/web/testing/: __init__.py  client.py  simulator.py
perf/: README.md  compare.py  genreport.py  historyrun.py  main.py  req.txt  runcommits.py
perf/benchmarks/: __init__.py  app.py  url.py  writeresponse.py
perf/benchmarks/res/: lorem.txt
perf/utils/: md5.py
tests/: conftest.py  mock_protocol.py  test_a2wsgi_integration.py  test_application.py  test_application2.py  test_asgi_middleware_wrapper.py  test_auth.py  test_auth_api_key.py  test_auth_basic.py  test_auth_cookie.py  test_auth_oidc.py  test_bindings.py  test_caching.py  test_contents.py  test_controllers.py  test_cookies.py  test_cors.py  test_csrf.py  test_dataprotection.py  test_encodings.py  test_env.py  test_file_buffer.py  test_filedata_openapi_integration.py  test_files_handler.py  test_files_serving.py  test_formpart_openapi_integration.py  test_forwarding.py  test_gzip.py  test_headers.py  test_jinja.py  test_middlewares.py  test_multipart.py  test_multipart_binder.py  test_normalization.py  test_openapi_docstrings.py  test_openapi_v3.py  test_pathutils.py  test_piccolo_admin_compat.py  test_prove.py  test_ranges.py  (+15 more)
tests/client/: __init__.py  test_client.py  test_connection.py  test_cookiejar.py  test_headers.py  test_middlewares.py  test_pool.py  test_query.py  test_redirects.py  test_timeouts.py
tests/examples/: multipart.py
tests/files/: example.txt
tests/files2/: index.html
tests/files2/scripts/: main.js
tests/files2/styles/: main.css
tests/res/: 0.pem  foreign.pem  jwks.json
tests/testapp/templates/: form_2.html
tests/utils/: __init__.py  application.py  folder.py  messages.py  scopes.py
wsdemo/: app.py
wsdemo/static/: chat.html
(+22 files in other folders)
