[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blacksheep"
dynamic = ["version"]
authors = [{ name = "Roberto Prevato", email = "roberto.prevato@gmail.com" }]
description = "Fast web framework for Python asyncio"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
keywords = ["blacksheep", "web framework", "asyncio"]
dependencies = [
    "certifi>=2025.4.26",
    "guardpost>=1.0.2",
    "rodi~=2.0.8",
    "essentials>=1.1.4,<2.0",
    "essentials-openapi>=1.2.0,<2.0",
    "python-dateutil~=2.9.0",
    "itsdangerous~=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["blacksheep*"]

[tool.setuptools.dynamic]
version = { attr = "blacksheep.__version__" }

[project.optional-dependencies]
jinja = ["Jinja2~=3.1.6"]
full = [
    "cryptography>=45.0.2,<46.0.0",
    "PyJWT~=2.10.1",
    "websockets~=15.0.1",
    "Jinja2~=3.1.6",
]
cython = ["httptools>=0.6.4"]
purepython = ["h11==0.16.0"]

[project.urls]
"Homepage" = "https://github.com/Neoteroi/BlackSheep"
"Bug Tracker" = "https://github.com/Neoteroi/BlackSheep/issues"
