[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cython>=3.0.0; platform_python_implementation != 'PyPy'",
]
build-backend = "setuptools.build_meta"

[project]
name = "blacksheep"
dynamic = ["version"]
authors = [{ name = "Roberto Prevato", email = "roberto.prevato@gmail.com" }]
description = "Fast web framework for Python asyncio"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["blacksheep", "web framework", "asyncio", "asgi"]
dependencies = [
    "certifi>=2025.4.26",
    "guardpost>=1.0.4",
    "rodi~=2.0.8",
    "essentials>=1.1.8,<2.0",
    "essentials-openapi>=1.2.0,<2.0",
    "itsdangerous~=2.2.0",
    "h11==0.16.0; platform_python_implementation == 'PyPy'",
    "httptools>=0.6.4; platform_python_implementation != 'PyPy'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["blacksheep*"]
exclude = ["tests*", "itests*"]

[tool.setuptools.dynamic]
version = { attr = "blacksheep.__version__" }

[project.optional-dependencies]
jinja = ["Jinja2~=3.1.6"]
full = [
    "cryptography>=45.0.2,<47.0.0",
    "PyJWT~=2.10.1",
    "websockets~=15.0.1",
    "Jinja2~=3.1.6",
]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==1.2.0",
    "pytest-cov==6.1.1",
    "black>=25.0.0",
    "isort>=6.0.0",
    "flake8>=7.0.0",
    "PyJWT==2.10.1",
    "Cython==3.1.2",
    "setuptools==80.7.1",
    "build>=1.0.0",
    "wheel>=0.40.0",
    "twine>=5.0.0",
    "cython-lint>=0.12.0",
    "watchdog>=3.0.0",
    "Jinja2~=3.1.6",
    "Flask[async]==3.1.1",
    "Hypercorn==0.17.3",
    "requests==2.32.4",
    "uvicorn==0.34.2",
    "pydantic==2.11.4",
    "pydantic_core==2.33.2",
    "cryptography>=45.0.2,<47.0.0",
    "websockets~=15.0.1",
]

[project.urls]
Homepage = "https://github.com/Neoteroi/BlackSheep"
Documentation = "https://www.neoteroi.dev/blacksheep/"
Issues = "https://github.com/Neoteroi/BlackSheep/issues"
Repository = "https://github.com/Neoteroi/BlackSheep"
Changelog = "https://github.com/Neoteroi/BlackSheep/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true
